--- a/test/fixtures/expenses.yml
+++ b/test/fixtures/expenses.yml
@@ -8,6 +8,7 @@
 #  group_id   :integer
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  creator_id :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
